cmake_minimum_required(VERSION 3.27)

project(Parking
        VERSION 0.1
		DESCRIPTION "SEEKING FOR PARIN"
		LANGUAGES CXX)

set(SOURCE
  src/main.cpp src/Base.h src/LoggingSystem.h
  src/window/window.h src/window/window.cpp
  src/extracter.h src/extracter.cpp
  src/lexer.h
  src/parser.h src/parser.cpp
  src/dataunit.h src/dataunit.cpp
  src/imgui/fastcombo.h
  src/imgui/dynamictimer.h src/imgui/dynamictimer.cpp
  src/imgui/deltatime.h)

set(IMGUI_DIR ext/imgui/)
set(SPDLOG_DIR ext/spdlog/)

set(IMGUI_SRC
  ${PROJECT_SOURCE_DIR}/ext/imgui/misc/cpp/imgui_stdlib.h
  ${PROJECT_SOURCE_DIR}/ext/imgui/misc/cpp/imgui_stdlib.cpp
  ${PROJECT_SOURCE_DIR}/ext/imgui/misc
  ${PROJECT_SOURCE_DIR}/ext/imgui/imstb_truetype.h
  ${PROJECT_SOURCE_DIR}/ext/imgui/imstb_textedit.h
  ${PROJECT_SOURCE_DIR}/ext/imgui/imstb_rectpack.h
  ${PROJECT_SOURCE_DIR}/ext/imgui/imgui_widgets.cpp
  ${PROJECT_SOURCE_DIR}/ext/imgui/imgui_tables.cpp
  ${PROJECT_SOURCE_DIR}/ext/imgui/imgui_internal.h
  ${PROJECT_SOURCE_DIR}/ext/imgui/imgui_impl_opengl3_loader.h
  ${PROJECT_SOURCE_DIR}/ext/imgui/imgui_impl_opengl3.h
  ${PROJECT_SOURCE_DIR}/ext/imgui/imgui_impl_opengl3.cpp
  ${PROJECT_SOURCE_DIR}/ext/imgui/imgui_impl_glfw.h
  ${PROJECT_SOURCE_DIR}/ext/imgui/imgui_impl_glfw.cpp
  ${PROJECT_SOURCE_DIR}/ext/imgui/imgui_draw.cpp
  ${PROJECT_SOURCE_DIR}/ext/imgui/imgui_demo.cpp
  ${PROJECT_SOURCE_DIR}/ext/imgui/imgui.h
  ${PROJECT_SOURCE_DIR}/ext/imgui/imgui.cpp
  ${PROJECT_SOURCE_DIR}/ext/imgui/imconfig.h)

set(SPDLOG_SRC
  ${PROJECT_SOURCE_DIR}/ext/spdlog/spdlog)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS -g)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
  
add_executable(${PROJECT_NAME} ${SOURCE} ${IMGUI_SRC} ${SPDLOG_SRC})

find_package(OpenGL REQUIRED)
target_link_libraries(${PROJECT_NAME} OpenGL::GL)

find_package(glfw3 3.3 REQUIRED)
target_link_libraries(${PROJECT_NAME} glfw)

target_include_directories(${PROJECT_NAME} PRIVATE ${SPDLOG_DIR})
target_include_directories(${PROJECT_NAME} PRIVATE ${IMGUI_DIR})
target_include_directories(${PROJECT_NAME} PRIVATE src/)
target_include_directories(${PROJECT_NAME} PRIVATE src/window/)
